Alignment corrected in shopping cart

--- a/src/pages/cart.module.css
+++ b/src/pages/cart.module.css
@@ -8,6 +8,15 @@ h1 {
     color: var(--main-color);
 }
 
+hr {
+    color: lightgray;
+}
+
+p {
+    display: flex;
+    justify-content: space-between;
+}
+
 .total {
     font-weight: bold;
 }
